@@ -2162,7 +2162,18 @@ SUB sfunctions(byval cmdid as integer)
    CASE 287'--get level mp
     IF valid_hero_party(retvals(0)) THEN
      IF bound_arg(retvals(1), 0, 7, "mp level") THEN
-      scriptret = lmp(retvals(0), retvals(1))
+      IF curcmd->argc = 2 THEN retvals(2) = 0  'Third arg added later
+      IF retvals(2) = 0 THEN
+       'Current stat
+       scriptret = lmp(retvals(0), retvals(1))
+      ELSEIF retvals(2) = 1 THEN
+       'Maximum stat
+       DIM levelmp(7) as integer
+       get_max_levelmp(levelmp(), gam.hero(retvals(0)).lev)
+       scriptret = levelmp(retvals(1))
+      ELSE
+       scripterr "getlevelmp: stat type should be currentstat==0 or maximumstat==1, not " & retvals(2), serrBadOp
+      END IF
      END IF
     END IF
    CASE 288'--set level mp
